# mcp-pdp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  deployment_devops.md  docker-compose.yml  plan.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
scripts/: deploy.sh  ingest_documents.py  test_rag.py
src/: __init__.py  server.py
src/document/: __init__.py  chunker.py  pdf_loader.py
src/rag/: __init__.py  embeddings.py  pinecone_client.py  retriever.py
src/tools/: __init__.py  pdp_tools.py
